--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ListView"/>
+
+    <Button
+        android:id="@+id/btn_recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RecyclerView"/>
+
+    <Button
+        android:id="@+id/btn_grid_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GridView"/>
 </LinearLayout>
