--- a/baserefreshview/src/main/res/layout/view_swipe_refresh_grid.xml
+++ b/baserefreshview/src/main/res/layout/view_swipe_refresh_grid.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.ishowedu.peiyin.common.widget.GridViewWithHeadFoot
+    <com.zhl.baserefreshview.GridViewWithHeadFoot
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
