--- a/app/src/main/res/layout/item_load_more.xml
+++ b/app/src/main/res/layout/item_load_more.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        android:text="————— 我是有底线的 —————"/>
+        android:text="我是有底线的"/>
 
     <TextView
         android:id="@+id/tv_error"
