--- a/app/src/main/res/layout/view_more_vertical.xml
+++ b/app/src/main/res/layout/view_more_vertical.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="15dp">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:padding="15dp">
 
     <ProgressBar
+        android:id="@+id/progress_bar"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:id="@+id/progress_bar"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/tv_no_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:text="我是有底线的"
         android:visibility="gone"
-        tools:visibility="visible"
-        android:text="我是有底线的"/>
+        tools:visibility="visible"/>
 
 </LinearLayout>
