demo 增加 ultra ptr支持

--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhl.baserefreshview.refreshView.SwipeRefreshGridView
+<com.zhl.baserefreshview.refreshView.SwipeRefreshLayout.SwipeRefreshGridView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sr_grid_view"
     android:orientation="vertical"
