--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhl.baserefreshview.refreshView.SwipeRefreshRecyclerView
+<com.zhl.baserefreshview.refreshView.SwipeRefreshLayout.SwipeRefreshRecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sr_recycler_view"
     android:orientation="vertical"
