--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GridView"/>
+
+    <Button
+        android:id="@+id/btn_ptr_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ptrlistview"/>
 </LinearLayout>
