--- a/app/src/main/res/layout/activity_ptr_list_view.xml
+++ b/app/src/main/res/layout/activity_ptr_list_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhl.baserefreshview.refreshView.SwipeRefreshLayout.SwipeRefreshListView
+<com.zhl.baserefreshview.demo.PtrRefreshListView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_refresh_list_view"
+    android:id="@+id/ptr_refresh_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
